updated example notebook

--- a/notebooks/stackql.ipynb
+++ b/notebooks/stackql.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "source": [
     "<a href=\"https://stackql.io/\" target=\"_blank\">\n",
-    "<img src=\"/assets/stackql-logo-bold.png\" alt=\"StackQL\" width=\"33%\" height=\"33%\">\n",
+    "<img src=\"assets/stackql-logo-bold.png\" alt=\"StackQL\" width=\"25%\" height=\"25%\">\n",
     "</a>\n",
-    "> A walkthrough is included in this notebook, modify this template or create your own notebook to get started with StackQL."
+    "<br />\n",
+    "<blockquote>\n",
+    "<p>walkthrough is included in this notebook, modify this template or create your own notebook to get started with StackQL.</p>\n",
+    "</blockquote>"
    ]
   },
   {
